<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addressbook"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/txtIdModContatto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNome" />
            <EditText
                android:id="@+id/edtModNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCognome" />
            <EditText
                android:id="@+id/edtModCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTelefono" />
            <EditText
                android:id="@+id/edtModTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnModRubrica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdressBook" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   " />
            <Button
                android:id="@+id/btnModSalva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUpDate" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   " />
            <Button
                android:id="@+id/btnModCancella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDelete" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>